@@ -1,5 +1,6 @@
 /* assuan-handler.c - dispatch commands
-   Copyright (C) 2001, 2002, 2003, 2007, 2009 Free Software Foundation, Inc.
+   Copyright (C) 2001, 2002, 2003, 2007, 2009,
+                 2011 Free Software Foundation, Inc.
 
    This file is part of Assuan.
 
